--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,6 +5,9 @@
 
     <data>
 
+        <variable
+            name="user"
+            type="com.example.applicationcuatoi.view.login.LoginViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -70,7 +73,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/numans"
-                android:hint="Email" />
+                android:hint="Email"
+                android:text="@={user.username}" />
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
@@ -91,7 +95,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/numans"
-                android:hint="Password" />
+                android:hint="Password"
+                android:text="@={user.password}" />
         </com.google.android.material.textfield.TextInputLayout>
 
         <TextView
@@ -104,6 +109,7 @@
             android:layout_marginEnd="19dp"
             android:layout_marginRight="19dp"
             android:fontFamily="@font/numans"
+            android:onClick="@{()-> user.clickForgotPassword()}"
             android:text="Forgot Password?"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.947"
@@ -117,6 +123,7 @@
             android:layout_margin="16dp"
             android:layout_marginTop="40dp"
             android:background="@drawable/layout_button_default"
+            android:onClick="@{()->user.onClickLogin()}"
             android:text="Login"
             android:textAllCaps="false"
             app:layout_constraintEnd_toEndOf="parent"
@@ -144,6 +151,7 @@
             android:layout_marginEnd="96dp"
             android:layout_marginRight="96dp"
             android:fontFamily="@font/numans"
+            android:onClick="@{() -> user.onClickSignUp()}"
             android:text="Signup"
             android:textColor="@color/color_default"
             app:layout_constraintEnd_toEndOf="parent"
