--- a/app/src/main/res/layout/fragment_favorite_movie.xml
+++ b/app/src/main/res/layout/fragment_favorite_movie.xml
@@ -7,6 +7,7 @@
     tools:context=".view.ui.favoritemovie.FavoriteMovieFragment">
 
     <androidx.recyclerview.widget.RecyclerView
+        tools:listitem="@layout/item_favorite_movie"
         android:id="@+id/rcFavoriteMovie"
         android:layout_width="match_parent"
         android:layout_height="0dp"
