--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -12,6 +12,22 @@
         <!-- Customize your theme here. -->
     </style>
 
+
+<!--        <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">-->
+<!--            <item name="bottomSheetDialogTheme">@style/AppBottomSheetDialogTheme</item>-->
+<!--        </style>-->
+
+<!--        <style name="AppModalStyle"-->
+<!--            parent="Widget.Design.BottomSheet.Modal">-->
+<!--            <item name="android:background">@drawable/layout_background</item>-->
+<!--        </style>-->
+
+<!--        <style name="AppBottomSheetDialogTheme"-->
+<!--            parent="Theme.Design.Light.BottomSheetDialog">-->
+<!--            <item name="bottomSheetStyle">@style/AppModalStyle</item>-->
+<!--        </style>-->
+
+
     <style name="SplashTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <item name="android:windowBackground">@drawable/ic_splash_screen</item>
     </style>
