--- a/app/src/main/res/layout/item_favorite_movie.xml
+++ b/app/src/main/res/layout/item_favorite_movie.xml
@@ -1,23 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_margin="8dp"
-    android:orientation="vertical">
+<layout xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <ImageView
-        android:id="@+id/imgAvatar"
-        android:layout_width="200dp"
-        android:layout_height="250dp"
-        android:layout_gravity="center"
-        android:scaleType="centerCrop"
-        android:src="@drawable/the_wolverine" />
+    <data>
 
-    <TextView
-        android:layout_marginTop="4dp"
-        android:textSize="12sp"
-        android:id="@+id/tvTitle"
-        android:layout_width="wrap_content"
+    </data>
+
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="TITLE" />
-</LinearLayout>
+        android:layout_margin="8dp"
+        android:padding="8dp"
+        android:background="@drawable/layout_item_recycleview"
+        android:orientation="vertical">
+
+        <ImageView
+            android:id="@+id/imgAvatar"
+            android:layout_width="200dp"
+            android:layout_height="250dp"
+            android:layout_gravity="center"
+            android:scaleType="centerCrop"
+            android:src="@drawable/the_wolverine" />
+
+        <TextView
+            android:textStyle="bold"
+            android:fontFamily="@font/numans"
+            android:layout_marginLeft="4dp"
+            android:layout_marginTop="4dp"
+            android:textSize="15sp"
+            android:id="@+id/tvTitle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="TITLE" />
+    </LinearLayout>
+</layout>
