--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-
     <color name="black">#FF000000</color>
     <color name="color_default">#40DE33</color>
-    <color name="white">#FFFFFFFF</color> 
+    <color name="white">#FFFFFFFF</color>
+    <color name="opacity">#66A4A1A1</color>
 </resources>
