--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,6 @@
     <color name="color_default">#40DE33</color>
     <color name="white">#FFFFFFFF</color>
     <color name="opacity">#66A4A1A1</color>
+    <color name="opacity100">#FFA4A1A1</color>
+
 </resources>
