--- a/app/src/main/res/layout/activity_detail_movie.xml
+++ b/app/src/main/res/layout/activity_detail_movie.xml
@@ -33,139 +33,146 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <LinearLayout
-            android:id="@+id/linearLayout2"
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@drawable/layout_detail_movie"
-            android:orientation="vertical"
-            android:paddingLeft="16dp"
-            android:paddingTop="40dp"
+            android:layout_height="match_parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent">
 
-            <TextView
-                android:id="@+id/tvDetailTitle"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="4dp"
-                android:fontFamily="@font/numans"
-                android:text="The Wolverine"
-                android:textSize="24sp"
-                android:textStyle="bold" />
-
-            <TextView
-                android:id="@+id/tvDetailDate"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="4dp"
-                android:fontFamily="@font/numans"
-                android:text="06-03-2000"
-                android:textSize="16sp" />
-
             <LinearLayout
+                android:id="@+id/linearLayout2"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="4dp"
-                android:orientation="horizontal">
+                android:layout_alignParentBottom="true"
+                android:background="@drawable/layout_detail_movie"
+                android:orientation="vertical"
+                android:paddingLeft="16dp"
+                android:paddingTop="40dp">
 
                 <TextView
-                    android:id="@+id/tvDetailVote"
-                    android:layout_width="wrap_content"
+                    android:id="@+id/tvDetailTitle"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginBottom="4dp"
                     android:fontFamily="@font/numans"
-                    android:text="1234"
+                    android:text="The Wolverine"
+                    android:textSize="24sp"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/tvDetailDate"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="4dp"
+                    android:fontFamily="@font/numans"
+                    android:text="06-03-2000"
                     android:textSize="16sp" />
 
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="4dp"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/tvDetailVote"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="@font/numans"
+                        android:text="1234"
+                        android:textSize="16sp" />
+
+                    <ImageView
+                        android:layout_width="16dp"
+                        android:layout_height="16dp"
+                        android:layout_gravity="center"
+                        android:layout_marginLeft="4dp"
+                        android:src="@drawable/heart_color" />
+                </LinearLayout>
+
+                <TextView
+                    android:id="@+id/tvDetailOverView"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="4dp"
+                    android:fontFamily="@font/numans"
+                    android:text="8.8"
+                    android:textSize="16sp"
+                    android:textStyle="bold" />
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:paddingTop="16dp"
+                    android:paddingBottom="16dp">
+
+                    <Button
+                        android:id="@+id/btnBuyCart"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:background="@drawable/layout_button_color_black"
+                        android:fontFamily="@font/numans"
+                        android:paddingLeft="40dp"
+                        android:paddingRight="40dp"
+                        android:text="BUY MOVIE TO CART"
+                        android:textColor="@color/white"
+                        android:textStyle="bold" />
+
+                    <RelativeLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerInParent="true"
+                        android:layout_marginLeft="50dp">
+
+                        <ProgressBar
+                            android:id="@+id/progressBar"
+                            style="?android:attr/progressBarStyleHorizontal"
+                            android:layout_width="50dp"
+                            android:layout_height="50dp"
+                            android:layout_centerInParent="true"
+                            android:indeterminate="false"
+                            android:max="100"
+                            android:progress="0"
+                            android:progressDrawable="@drawable/custom_progressbar_drawable"
+                            android:secondaryProgress="0" />
+
+                        <TextView
+                            android:id="@+id/txtProgress"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_alignBottom="@+id/progressBar"
+                            android:layout_centerInParent="true"
+                            android:fontFamily="@font/numans"
+                            android:textAppearance="?android:attr/textAppearanceSmall"
+                            android:textSize="12sp"
+                            android:textStyle="bold" />
+                    </RelativeLayout>
+                </LinearLayout>
+
+            </LinearLayout>
+
+            <androidx.cardview.widget.CardView
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_above="@+id/linearLayout2"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentRight="true"
+                android:layout_marginEnd="175dp"
+                android:layout_marginRight="175dp"
+                android:layout_marginBottom="-23dp"
+                app:cardCornerRadius="25dp">
+
                 <ImageView
+                    android:id="@+id/imgPlay"
                     android:layout_width="16dp"
                     android:layout_height="16dp"
                     android:layout_gravity="center"
-                    android:layout_marginLeft="4dp"
-                    android:src="@drawable/heart_color" />
-            </LinearLayout>
-
-            <TextView
-                android:id="@+id/tvDetailOverView"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="4dp"
-                android:fontFamily="@font/numans"
-                android:text="8.8"
-                android:textSize="16sp"
-                android:textStyle="bold" />
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:paddingTop="16dp"
-                android:paddingBottom="16dp">
-
-                <Button
-                    android:id="@+id/btnBuyCart"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:background="@drawable/layout_button_color_black"
-                    android:fontFamily="@font/numans"
-                    android:paddingLeft="40dp"
-                    android:paddingRight="40dp"
-                    android:text="BUY MOVIE TO CART"
-                    android:textColor="@color/white"
-                    android:textStyle="bold" />
-
-                <RelativeLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerInParent="true"
-                    android:layout_marginLeft="50dp">
-
-                    <ProgressBar
-                        android:id="@+id/progressBar"
-                        style="?android:attr/progressBarStyleHorizontal"
-                        android:layout_width="50dp"
-                        android:layout_height="50dp"
-                        android:layout_centerInParent="true"
-                        android:indeterminate="false"
-                        android:max="100"
-                        android:progress="0"
-                        android:progressDrawable="@drawable/custom_progressbar_drawable"
-                        android:secondaryProgress="0" />
-
-                    <TextView
-                        android:id="@+id/txtProgress"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_alignBottom="@+id/progressBar"
-                        android:layout_centerInParent="true"
-                        android:fontFamily="@font/numans"
-                        android:textAppearance="?android:attr/textAppearanceSmall"
-                        android:textSize="12sp"
-                        android:textStyle="bold" />
-                </RelativeLayout>
-            </LinearLayout>
-
-        </LinearLayout>
-
-        <androidx.cardview.widget.CardView
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:layout_marginBottom="204dp"
-            app:cardCornerRadius="25dp"
-            app:layout_constraintBottom_toBottomOf="@+id/imgDetailAvatar"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.498"
-            app:layout_constraintStart_toStartOf="parent">
-
-            <ImageView
-                android:layout_marginLeft="2dp"
-                android:layout_gravity="center"
-                android:id="@+id/imgPlay"
-                android:layout_width="16dp"
-                android:layout_height="16dp"
-                android:background="@drawable/play_button" />
-        </androidx.cardview.widget.CardView>
+                    android:layout_marginLeft="2dp"
+                    android:background="@drawable/play_button" />
+            </androidx.cardview.widget.CardView>
+        </RelativeLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
