--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -16,6 +16,12 @@
         android:orientation="vertical"
         tools:context=".view.signup.SignUpActivity">
 
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/toolbarSignUp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/color_default" />
+
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="200dp"
