--- a/app/src/main/res/drawable/custom_progressbar_drawable.xml
+++ b/app/src/main/res/drawable/custom_progressbar_drawable.xml
@@ -3,17 +3,20 @@
     android:fromDegrees="-90"
     android:pivotX="50%"
     android:pivotY="50%"
-    android:toDegrees="270" >
+    android:toDegrees="270">
 
     <shape
         android:shape="ring"
-        android:useLevel="false" >
-        <gradient
-            android:centerY="0.5"
-            android:endColor="#FA5858"
-            android:startColor="#0099CC"
-            android:type="sweep"
-            android:useLevel="false" />
+        android:useLevel="false">
+
+        <solid android:color="#25D6E1" />
+
+        <!--        <gradient-->
+        <!--            android:centerY="0.5"-->
+        <!--            android:endColor="#FA5858"-->
+        <!--            android:startColor="#0099CC"-->
+        <!--            android:type="sweep"-->
+        <!--            android:useLevel="false" />-->
     </shape>
 
 </rotate>
