--- a/app/src/main/res/layout/activity_detail_movie.xml
+++ b/app/src/main/res/layout/activity_detail_movie.xml
@@ -169,16 +169,14 @@
                         android:layout_centerInParent="true"
                         android:layout_marginLeft="50dp">
 
-                        <ProgressBar
+                        <com.example.applicationcuatoi.utils.CircularProgressBar
                             android:id="@+id/progressBar"
                             style="?android:attr/progressBarStyleHorizontal"
                             android:layout_width="50dp"
                             android:layout_height="50dp"
                             android:layout_centerInParent="true"
                             android:indeterminate="false"
-                            android:max="100"
                             android:progress="0"
-                            android:progressDrawable="@drawable/custom_progressbar_drawable"
                             android:secondaryProgress="0" />
 
                         <TextView
